--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,31 +37,31 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<Navigation />
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1><span class="text-gradient">Franco Castelli DEV</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			Mamelo <code>SEÑORITA</code> <br />
+			<strong>Valentina Santibañez</strong> Love U.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				title="Pro Tips ABAP"
+				body="Tips sobre SAP que nunca estan de mas. Recopilados a lo largo de la histora."
 			/>
 			<Card
 				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				title="Proyectos"
+				body="Portafolio de proyectos y desarrollos varios."
 			/>
 			<Card
 				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				title="Tecnologias"
+				body="Lista de tecnologias con las que puedo trabajar."
 			/>
 			<Card
 				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				title="Contacto"
+				body="Si quieres realizar un proyecto y no sabes como, no dudes en contactarme. ❤️"
 			/>
 		</ul>
 		<Footer />
